objects/SandboxRefreshDriver_User_Rule__mdt.object
<CustomObject>
    <fields>
        <fullName>Mode__c</fullName>
        <label>Mode</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active Users</fullName>
                    <default>true</default>
                    <label>Active Users</label>
                </value>
                <value>
                    <fullName>CSV Static Resource</fullName>
                </value>
                <value>
                    <fullName>Use Custom Metadata Data Load</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Revert_Email_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revert Email Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SandboxRefreshDriver_Sandbox__c</fullName>
        <label>SandboxRefreshDriver Sandbox</label>
        <referenceTo>SandboxRefreshDriver_Sandbox__mdt</referenceTo>
        <relationshipLabel>SandboxRefreshDriver User Rules</relationshipLabel>
        <relationshipName>SandboxRefreshDriver_User_Rules</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <label>SandboxRefreshDriver User Rule</label>
    <pluralLabel>SandboxRefreshDriver User Rules</pluralLabel>
</CustomObject>